# Busibot

./: PROJECT_SUMMARY.md  README.md
backend/: .env.local  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  middleware.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  chat.py  forecasts.py  ideas.py  investors.py  market_research.py  plans.py  users.py
backend/app/auth/: __init__.py  dependencies.py  jwt_handler.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  auth.py  chat.py  forecasts.py  ideas.py  investors.py  market_research.py  plans.py  users.py
backend/app/services/: __init__.py
docs/: API_SPEC.md  ARCHITECTURE.md  DB_SCHEMA.md  DEPLOYMENT.md  ROADMAP.md
frontend/: tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/dashboard/: nav.tsx
frontend/src/components/ui/: input.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: api-client.ts  utils.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
